--- a/lib/x86_64-linux/gradecheckerlisting.lfm
+++ b/lib/x86_64-linux/gradecheckerlisting.lfm
@@ -1,14 +1,14 @@
 object Form1: TForm1
   Left = 248
-  Height = 233
+  Height = 353
   Top = 133
-  Width = 193
-  Caption = 'Form1'
-  ClientHeight = 233
-  ClientWidth = 193
+  Width = 263
+  Caption = 'Grade Checker'
+  ClientHeight = 353
+  ClientWidth = 263
   LCLVersion = '2.2.2.0'
   object Label1: TLabel
-    Left = 32
+    Left = 72
     Height = 24
     Top = 8
     Width = 127
@@ -19,9 +19,9 @@ object Form1: TForm1
     ParentFont = False
   end
   object Label2: TLabel
-    Left = 24
+    Left = 16
     Height = 19
-    Top = 64
+    Top = 192
     Width = 63
     Caption = 'Nilai UTS'
     Font.Height = -15
@@ -30,17 +30,17 @@ object Form1: TForm1
     ParentFont = False
   end
   object NilaiPTS: TEdit
-    Left = 96
+    Left = 88
     Height = 34
-    Top = 56
-    Width = 80
+    Top = 184
+    Width = 152
     NumbersOnly = True
-    TabOrder = 0
+    TabOrder = 2
   end
   object Label3: TLabel
-    Left = 24
+    Left = 17
     Height = 19
-    Top = 120
+    Top = 248
     Width = 63
     Caption = 'Nilai UAS'
     Font.Height = -15
@@ -49,31 +49,31 @@ object Form1: TForm1
     ParentFont = False
   end
   object NilaiUAS: TEdit
-    Left = 96
+    Left = 88
     Height = 34
-    Top = 112
-    Width = 80
+    Top = 240
+    Width = 152
     NumbersOnly = True
-    TabOrder = 1
+    TabOrder = 3
   end
   object ButtonCheck: TButton
-    Left = 80
+    Left = 88
     Height = 41
-    Top = 168
-    Width = 96
+    Top = 296
+    Width = 152
     Caption = 'Check'
     Font.Height = -15
     Font.Name = 'Product Sans'
     Font.Style = [fsBold]
     OnClick = ButtonCheckClick
     ParentFont = False
-    TabOrder = 2
+    TabOrder = 4
   end
   object ButtonClear: TButton
-    Left = 24
+    Left = 16
     Height = 40
-    Top = 168
-    Width = 44
+    Top = 296
+    Width = 64
     Caption = 'C'
     Font.Color = clRed
     Font.Height = -13
@@ -81,14 +81,50 @@ object Form1: TForm1
     Font.Style = [fsBold]
     OnClick = ButtonClearClick
     ParentFont = False
-    TabOrder = 3
+    TabOrder = 5
   end
   object Label4: TLabel
-    Left = 72
+    Left = 88
     Height = 17
     Top = 32
-    Width = 48
-    Caption = 'by Rafli'
+    Width = 96
+    Caption = 'by Rafli Raihan'
     ParentColor = False
+  end
+  object Label5: TLabel
+    Left = 17
+    Height = 19
+    Top = 77
+    Width = 39
+    Caption = 'Nama'
+    Font.Height = -15
+    Font.Name = 'Product Sans'
+    ParentColor = False
+    ParentFont = False
+  end
+  object Label6: TLabel
+    Left = 16
+    Height = 21
+    Top = 136
+    Width = 37
+    Caption = 'Kelas'
+    Font.Height = -16
+    Font.Name = 'Product Sans'
+    ParentColor = False
+    ParentFont = False
+  end
+  object EditNama: TEdit
+    Left = 88
+    Height = 34
+    Top = 72
+    Width = 152
+    TabOrder = 0
+  end
+  object EditKelas: TEdit
+    Left = 88
+    Height = 34
+    Top = 128
+    Width = 152
+    TabOrder = 1
   end
 end
